--- a/main.ipynb
+++ b/main.ipynb
@@ -2,24 +2,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uH9zkZOWpfGD",
-        "outputId": "1b55a36e-b974-4870-824d-96d58792aa73"
-      },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/mnt/DATA1/wuliubin/miniconda3/envs/metro/lib/python3.9/site-packages/lightgbm/engine.py:577: UserWarning: 'early_stopping_rounds' argument is deprecated and will be removed in a future release of LightGBM. Pass 'early_stopping()' callback via 'callbacks' argument instead.\n",
-            "  _log_warning(\"'early_stopping_rounds' argument is deprecated and will be removed in a future release of LightGBM. \"\n"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# For Google colab\n",
+        "# !git clone https://github.com/WryBin/Steam_pre_commit\n",
+        "# !mv Steam_pre_commit/* ."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -173,9 +169,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.9.13 ('metro')",
-      "language": "python",
-      "name": "python3"
+      "display_name": "Julia 1.7.3",
+      "language": "julia",
+      "name": "julia-1.7"
     },
     "language_info": {
       "codemirror_mode": {
@@ -184,7 +180,7 @@
       },
       "file_extension": ".py",
       "mimetype": "text/x-python",
-      "name": "python",
+      "name": "julia",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.13"
